Fixed issue with how mouse clicks on two overlapping objects shows legend for both; slider now overlays with p5 canvas by fiddling with css properties; added behavior for microplastics to freeze when macroplastics are fixed; see suggestions channel for next steps

--- a/src/App.css
+++ b/src/App.css
@@ -18,12 +18,23 @@
     stroke-linecap: round;
 }
 
+.Child2 {
+    position: fixed;
+    top: 10px;
+    right: 10px;
+}
+
 .slider-svg {
-    margin: 0px;
-    padding: 0px;
-    position: relative;
+    position: fixed;
     min-height: 100px;
     max-height: 150px;
+    bottom: 40px;
+    width: 100%;
+    background: rgba(255,255,255,0);
+}
+
+.App-container .track-text {
+    font-size: 0.8vw;
 }
 
 .App-container .label {
